--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,16 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties (https://fabricmc.net/versions.html)
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.1
-loader_version=0.14.11
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
+loader_version=0.15.11
 
-# Mod Properties (to automatically tag on linux: 'git tag $(grep -oP '^mod_version = \K.*' gradle.properties)')
-mod_version = 1.2.1
-maven_group = net.clayborn
-archives_base_name = accurate-block-placement
+# Mod Properties
+mod_version=1.3.0
+maven_group=net.clayborn
+archives_base_name=AccurateBlockPlacement
 
 # Dependencies
-fabric_version=0.91.2+1.20.4
+fabric_version=0.100.1+1.21
